# BoostTestCmakeExample

./: CMakeLists.txt  CMakeSettings.json  README.md
MyProject/: BoostTest.cpp  CMakeLists.txt
MyProject_test/: BoostTest_test.cpp  CMakeLists.txt
